--- a/My Purchases.html
+++ b/My Purchases.html
@@ -23,100 +23,105 @@
 <!--===============================================================================================-->	
 	<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
 <!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/perfect-scrollbar/perfect-scrollbar.css">		
+	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">	
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="/css/searchbar.css">
+	<link rel="stylesheet" href="/ListingWebPage/ListingWebPage.css">
 <!--===============================================================================================-->
 </head>
 <body>
-	
-	<div class="limiter" style="background-image: url('images/bg-01.jpg');">
-
-
-		<div class="searchbar">
-            <h1 class="login100-h1-title">HighBuy</h1>
-
-        </div>
+	<div class="limiter-new" style="background-image: url('images/bg-01.jpg');">
 		
+        <div class="searchbar">
+            <h1 class="login100-h1-title">HighBuy</h1>
+			<div class="container-listing-form-btn">
+				<div class="wrap-listing-categories-form-btn">
+					<div class="listing100-form-bgbtn"></div>
+					<a href="NewHomePage.html" class="login100-form-btn">
+						Home Page
+					</a>
+	
+				</div>
+			</div>
+	
+				<div class="container-listing-form-btn">
+					<div class="wrap-listing-login100-form-btn">
+						<div class="listing100-form-bgbtn"></div>
+						<a href="/NewLogin.html" class="login100-form-btn">
+							Log Out
+						</a>
+	
+					</div>
+				</div>
+            <div id="cover">
+                <form method="get" action="">
+                  <div class="tb">
+                    <div class="td"><input type="text" placeholder="Search" required></div>
+                    <div class="td" id="s-cover">
+                      <button type="submit">
+                        <div id="s-circle"></div>
+                        <span></span>
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+
+
+              
+        </div>
+
+		<div>            
+            <hr>
+            <h1 class="login100-h1-title">My Purchases</h1>
+
+            <br>
+			<table>
+				<tr>
+					<td>Listing ID</td>
+					<td>Listing Date</td>
+                    <td>Category</td>
+                    <td>Condition</td>
+                    <td>Brand</td>
+					<td>Sellers Username</td>
+				</tr>
+				<tr>
+					<td>1</td>
+					<td>29.03.2022</td>
+                    <td>Electronics</td>
+                    <td>New</td>
+                    <td>Apple</td>
+					<td>Karataş</td>
+
+					<tr>
+						<td>2</td>
+						<td>30.03.2022</td>
+                        <td>Furniture</td>
+                        <td>New</td>
+                        <td>Ikea</td>
+						<td>Yığ</td>
+
+					</tr>
+					<tr>
+						<td>3</td>
+						<td>31.03.2022</td>
+                        <td>Book</td>
+                        <td>Used</td>
+                        <td>Epsilon</td>
+						<td>Özdemir</td>
+
+					</tr>
+				</tr>
+			</table>
+		</div>
 
 		<div class="container-login100">
 			
-			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-				<form class="login100-form validate-form">
-					
 
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="Profile.html" class="homepage-btn">
-								Profile
-							</a>
-
-						</div>
-					</div>
-                    <br>
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="HomePage/Home Page.html" class="homepage-btn">
-								My Messages
-							</a>
-						</div>
-					</div>
-                    <br>
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="HomePage/Home Page.html" class="homepage-btn">
-								Create New Listing
-							</a>
-						</div>
-					</div>
-                    <br>
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="HomePage/Home Page.html" class="homepage-btn">
-								My Listings
-							</a>
-
-						</div>
-					</div>
-                    <br>
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="HomePage/Home Page.html" class="homepage-btn">
-								My Bids
-							</a>
-
-						</div>
-					</div>
-                    <br>
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="My Purchases.html" class="homepage-btn">
-								My Purchases
-							</a>
-
-						</div>
-					</div>
-                    <br>
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="NewMyFavoriteListings.html" class="homepage-btn">
-								My Favorite Listings
-							</a>
-
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
 	</div>
-	
+
 
 	<div id="dropDownSelect1"></div>
 	
@@ -136,6 +141,7 @@
 	<script src="vendor/countdowntime/countdowntime.js"></script>
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
+	<script src="vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 
 </body>
 </html>
