--- a/My Purchases.html
+++ b/My Purchases.html
@@ -88,7 +88,7 @@
 					<td>Sellers Username</td>
 				</tr>
 				<tr>
-					<td>1</td>
+					<td><a href="ItemPage.html">1</a></td>
 					<td>29.03.2022</td>
                     <td>Electronics</td>
                     <td>New</td>
@@ -96,7 +96,7 @@
 					<td>Karataş</td>
 
 					<tr>
-						<td>2</td>
+						<td><a href="ItemPage.html">2</a></td>
 						<td>30.03.2022</td>
                         <td>Furniture</td>
                         <td>New</td>
@@ -105,7 +105,7 @@
 
 					</tr>
 					<tr>
-						<td>3</td>
+						<td><a href="ItemPage.html">3</a></td>
 						<td>31.03.2022</td>
                         <td>Book</td>
                         <td>Used</td>
