--- a/MyListings.html
+++ b/MyListings.html
@@ -54,38 +54,85 @@
 			  <div class="container-listing-form-btn">
 				<div class="wrap-listing-categories-form-btn">
 					<div class="listing100-form-bgbtn"></div>
-					<a href="NewHomePage.html" class="login100-form-btn">
-						Home Page
+					<a href="/Categories.html" class="login100-form-btn">
+						Categories
 					</a>
-	
+
 				</div>
 			</div>
-	
+
+                <div class="container-listing-form-btn">
+                    <div class="wrap-listing-login100-form-btn">
+                        <div class="listing100-form-bgbtn"></div>
+                        <a href="/NewLogin.html" class="login100-form-btn">
+                            Log Out
+                        </a>
+
+                    </div>
+                </div>
+
 				<div class="container-listing-form-btn">
-					<div class="wrap-listing-login100-form-btn">
+					<div class="wrap-listing-home-form-btn">
 						<div class="listing100-form-bgbtn"></div>
-						<a href="/NewLogin.html" class="login100-form-btn">
-							Log Out
+						<a href="NewHomePage.html" class="login100-form-btn">
+							Home Page
 						</a>
-	
+		
 					</div>
 				</div>
+		
+				
               
         </div>
 
 		<div>
+            <h1 class="login101-h1-title">My Listings</h1>
             <hr>
-            <h1 class="login100-h1-title">Sent</h1>
+            <h1 class="login100-h1-title">Buy It Now</h1>
+            <br>
+			<table>
+				<tr>
+					<td>Listing ID</td>
+					<td>Listing Date</td>
+                    <td>Item Price</td>
+				</tr>
+				<tr>
+					<td><a href="ItemPage.html">1</a></td>
+					<td>29.03.2022</td>
+                    <td>200$</td>
+					<td><a href="http://BuyItNowListing.html">Delete</a></td>
+					<td><a href="http://BuyItNowListing.html">Edit</a></td>
+
+					<tr>
+						<td><a href="ItemPage.html">2</a></td>
+						<td>30.03.2022</td>
+                        <td>300$</td>
+                        <td><a href="http://BuyItNowListing.html">Delete</a></td>
+                        <td><a href="http://BuyItNowListing.html">Edit</a></td>
+
+					</tr>
+					<tr>
+						<td><a href="ItemPage.html">3</a></td>
+						<td>31.03.2022</td>
+                        <td>400$</td>
+                        <td><a href="http://BuyItNowListing.html">Delete</a></td>
+                        <td><a href="http://BuyItNowListing.html">Edit</a></td>
+					</tr>
+				</tr>
+			</table>
+            <br>
+            <hr>
+            <br>
+            <h1 class="login100-h1-title">Auction</h1>
             <br>
             <table>
 				<tr>
 					<td>Listing ID</td>
 					<td>Listing Date</td>
-					<td>Sellers Username</td>
+					<td>Bidders Username</td>
                     <td>Highest Bid</td>
                     <td>Number of Total Bids</td>
                     <td>Bid Amount</td>
-                    <td>My Bid</td>
 				</tr>
 				<tr>
 					<td><a href="ItemPage.html">1</a></td>
@@ -94,8 +141,8 @@
                     <td>300$</td>
                     <td>40</td>
                     <td>10$</td>
-                    <td>300$</td>
-
+					<td><a href="http://BuyItNowListing.html">Delete</a></td>
+					<td><a href="http://BuyItNowListing.html">Edit</a></td>
 					<tr>
 						<td><a href="ItemPage.html">2</a></td>
 						<td>30.03.2022</td>
@@ -103,8 +150,8 @@
                         <td>400$</td>
                         <td>50</td>
                         <td>20$</td>
-                        <td>260$</td>
-
+                        <td><a href="http://BuyItNowListing.html">Delete</a></td>
+                        <td><a href="http://BuyItNowListing.html">Edit</a></td>
 					</tr>
 					<tr>
 						<td><a href="ItemPage.html">3</a></td>
@@ -113,76 +160,8 @@
                         <td>600$</td>
                         <td>60</td>
                         <td>30$</td>
-                        <td>360$</td>
-
-					</tr>
-				</tr>
-			</table>
-            <br>
-            <hr>
-            <br>
-            <h1 class="login100-h1-title">Received</h1>
-            <br>
-            <table>
-				<tr>
-					<td>Listing ID</td>
-					<td>Listing Date</td>
-					<td>Bidders Username</td>
-                    <td>Bid</td>
-				</tr>
-				<tr>
-					<td><a href="ItemPage.html">1</a></td>
-					<td>29.03.2022</td>
-					<td>Karataş</td>
-                    <td>400$</td>
-
-
-					<tr>
-						<td><a href="ItemPage.html">1</a></td>
-						<td>29.03.2022</td>
-						<td>Yığ</td>
-                        <td>500$</td>
-
-					</tr>
-					<tr>
-						<td><a href="ItemPage.html">1</a></td>
-						<td>29.03.2022</td>
-						<td>Özdemir</td>
-                        <td>600$</td>
-
-					</tr>
-				</tr>
-			</table>
-
-            <br>
-
-            <table>
-				<tr>
-					<td>Listing ID</td>
-					<td>Listing Date</td>
-					<td>Bidders Username</td>
-                    <td>Bid</td>
-				</tr>
-				<tr>
-					<td><a href="ItemPage.html">2</a></td>
-					<td>30.03.2022</td>
-					<td>Karataş</td>
-                    <td>400$</td>
-
-
-					<tr>
-						<td><a href="ItemPage.html">2</a></td>
-						<td>30.03.2022</td>
-						<td>Yığ</td>
-                        <td>500$</td>
-
-					</tr>
-					<tr>
-						<td><a href="ItemPage.html">2</a></td>
-						<td>30.03.2022</td>
-						<td>Özdemir</td>
-                        <td>600$</td>
-
+                        <td><a href="http://BuyItNowListing.html">Delete</a></td>
+                        <td><a href="http://BuyItNowListing.html">Edit</a></td>
 					</tr>
 				</tr>
 			</table>
