--- a/NewBuyItNowListing.html
+++ b/NewBuyItNowListing.html
@@ -70,10 +70,23 @@
 
                     </div>
                 </div>
+
+				<div class="container-listing-form-btn">
+					<div class="wrap-listing-home-form-btn">
+						<div class="listing100-form-bgbtn"></div>
+						<a href="/NewHomePage.html" class="login100-form-btn">
+							Home Page
+						</a>
+	
+					</div>
+				</div>
               
         </div>
 
 		<div>
+			<hr>
+            <h1 class="login100-h1-title">Buy It Now</h1>
+			<br>
 			<table>
 				<tr>
 					<td>Listing ID</td>
@@ -82,7 +95,7 @@
                     <td>Item Price</td>
 				</tr>
 				<tr>
-					<td>1</td>
+					<td><a href="ItemPage.html">1</a></td>
 					<td>29.03.2022</td>
 					<td>Karataş</td>
                     <td>200$</td>
@@ -90,7 +103,7 @@
 					<td><a href="http://BuyItNowListing.html">Contact Seller</a></td>
                     <td><a href="http://BuyItNowListing.html">Buy It Now</a></td>
 					<tr>
-						<td>2</td>
+						<td><a href="ItemPage.html">2</a></td>
 						<td>30.03.2022</td>
 						<td>Yığ</td>
                         <td>300$</td>
@@ -99,7 +112,7 @@
                         <td><a href="http://BuyItNowListing.html">Buy It Now</a></td>
 					</tr>
 					<tr>
-						<td>3</td>
+						<td><a href="ItemPage.html">3</a></td>
 						<td>31.03.2022</td>
 						<td>Özdemir</td>
                         <td>400$</td>
