--- a/CreateNewListing.html
+++ b/CreateNewListing.html
@@ -25,40 +25,45 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" href="/css/searchbar.css">
 <!--===============================================================================================-->
 </head>
 <body>
 	
 	<div class="limiter" style="background-image: url('images/bg-01.jpg');">
+		<h1 class="login100-h1-title">HighBuy</h1>
 
+        <div class="container-listing-form-btn">
+            <div class="wrap-listing-categories-form-btn">
+                <div class="listing100-form-bgbtn"></div>
+                <a href="NewHomePage.html" class="login100-form-btn">
+                    Home Page
+                </a>
 
-		<div class="searchbar">
-            <h1 class="login100-h1-title">HighBuy</h1>
-
+            </div>
         </div>
 
+            <div class="container-listing-form-btn">
+                <div class="wrap-listing-login100-form-btn">
+                    <div class="listing100-form-bgbtn"></div>
+                    <a href="/NewLogin.html" class="login100-form-btn">
+                        Log Out
+                    </a>
+
+                </div>
+            </div>
+
 		<div class="container-login100">
-			
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
 				<form class="login100-form validate-form">
-					
+					<span class="login100-form-title p-b-49">
+						Create New Listing
+					</span>
 
                     <div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
-							<a href="Profile.html" class="homepage-btn">
-								Profile
-							</a>
-
-						</div>
-					</div>
-                    <br>
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="MyMessages.html" class="homepage-btn">
-								My Messages
+							<a href="CreateBuyItNow.html" class="homepage-btn">
+								Buy It Now
 							</a>
 						</div>
 					</div>
@@ -66,60 +71,12 @@
                     <div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
-							<a href="CreateNewListing.html" class="homepage-btn">
-								Create New Listing
+							<a href="CreateAuction.html" class="homepage-btn">
+								Auction
 							</a>
 						</div>
 					</div>
-                    <br>
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="MyListings.html" class="homepage-btn">
-								My Listings
-							</a>
 
-						</div>
-					</div>
-                    <br>
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="MyBids.html" class="homepage-btn">
-								My Bids
-							</a>
-
-						</div>
-					</div>
-                    <br>
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="My Purchases.html" class="homepage-btn">
-								My Purchases
-							</a>
-
-						</div>
-					</div>
-                    <br>
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="NewMyFavoriteListings.html" class="homepage-btn">
-								My Favorite Listings
-							</a>
-
-						</div>
-					</div>
-					<br>
-                    <div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<a href="NewListingWebpage.html" class="homepage-btn">
-								All Listings
-							</a>
-
-						</div>
 					</div>
 				</form>
 			</div>
