--- a/AuctionItemPage.html
+++ b/AuctionItemPage.html
@@ -98,6 +98,22 @@
                                             </div>
                                             <div class="row">
                                                 <div class="col-md-6">
+                                                    <label>Category</label>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <p>Electronics</p>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <label>Condition</label>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <p>Used</p>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-6">
                                                     <label>Item Id</label>
                                                 </div>
                                                 <div class="col-md-6">
@@ -125,7 +141,7 @@
                                             
                                             <div class="row">
                                                 <div class="col-md-6">
-                                                    <label>Bıd Amount</label>
+                                                    <label>Bid Amount</label>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <p>30$</p>
@@ -144,7 +160,7 @@
                                             <div class="container-login100-form-btn">
                                                 <div class="wrap-login100-form-btn">
                                                     <div class="login100-form-bgbtn"></div>
-                                                    <a class="login100-form-btn"href="/HomePage/Home Page.html">Place Bid</a>
+                                                    <a class="login100-form-btn"href="MyBids.html">Place Bid</a>
                                                 </div>
                                             </div>
 
