--- a/ItemPage.html
+++ b/ItemPage.html
@@ -64,7 +64,9 @@
                             <div class="profile-img">
                                 <img src="images/macbook.jpg" alt=""/>
                             </div>
+                            
                         </div>
+                        
                         <div class="col-md-6">
                             <div class="profile-head">
                                         <h5>
@@ -94,6 +96,22 @@
                                                 </div>
                                                 <div class="col-md-6">
                                                     <p>Joshua</p>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <label>Category</label>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <p>Electronics</p>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <label>Condition</label>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <p>New</p>
                                                 </div>
                                             </div>
                                             <div class="row">
@@ -134,7 +152,7 @@
                                             <div class="container-login100-form-btn">
                                                 <div class="wrap-login100-form-btn">
                                                     <div class="login100-form-bgbtn"></div>
-                                                    <a class="login100-form-btn"href="/HomePage/Home Page.html">Buy It Now</a>
+                                                    <a class="login100-form-btn"href="My Purchases.html">Buy It Now</a>
                                                 </div>
                                             </div>
 
