--- a/MyBids.html
+++ b/MyBids.html
@@ -88,7 +88,7 @@
                     <td>My Bid</td>
 				</tr>
 				<tr>
-					<td><a href="ItemPage.html">1</a></td>
+					<td><a href="AuctionItemPage.html">1</a></td>
 					<td>29.03.2022</td>
 					<td>Karataş</td>
                     <td>300$</td>
@@ -97,7 +97,7 @@
                     <td>300$</td>
 
 					<tr>
-						<td><a href="ItemPage.html">2</a></td>
+						<td><a href="AuctionItemPage.html">2</a></td>
 						<td>30.03.2022</td>
 						<td>Yığ</td>
                         <td>400$</td>
@@ -107,7 +107,7 @@
 
 					</tr>
 					<tr>
-						<td><a href="ItemPage.html">3</a></td>
+						<td><a href="AuctionItemPage.html">3</a></td>
 						<td>31.03.2022</td>
 						<td>Özdemir</td>
                         <td>600$</td>
@@ -131,21 +131,21 @@
                     <td>Bid</td>
 				</tr>
 				<tr>
-					<td><a href="ItemPage.html">1</a></td>
+					<td><a href="AuctionItemPage.html">1</a></td>
 					<td>29.03.2022</td>
 					<td>Karataş</td>
                     <td>400$</td>
 
 
 					<tr>
-						<td><a href="ItemPage.html">1</a></td>
+						<td><a href="AuctionItemPage.html">1</a></td>
 						<td>29.03.2022</td>
 						<td>Yığ</td>
                         <td>500$</td>
 
 					</tr>
 					<tr>
-						<td><a href="ItemPage.html">1</a></td>
+						<td><a href="AuctionItemPage.html">1</a></td>
 						<td>29.03.2022</td>
 						<td>Özdemir</td>
                         <td>600$</td>
@@ -164,21 +164,21 @@
                     <td>Bid</td>
 				</tr>
 				<tr>
-					<td><a href="ItemPage.html">2</a></td>
+					<td><a href="AuctionItemPage.html">2</a></td>
 					<td>30.03.2022</td>
 					<td>Karataş</td>
                     <td>400$</td>
 
 
 					<tr>
-						<td><a href="ItemPage.html">2</a></td>
+						<td><a href="AuctionItemPage.html">2</a></td>
 						<td>30.03.2022</td>
 						<td>Yığ</td>
                         <td>500$</td>
 
 					</tr>
 					<tr>
-						<td><a href="ItemPage.html">2</a></td>
+						<td><a href="AuctionItemPage.html">2</a></td>
 						<td>30.03.2022</td>
 						<td>Özdemir</td>
                         <td>600$</td>
