--- a/MyListings.html
+++ b/MyListings.html
@@ -115,7 +115,7 @@
 						<td><a href="ItemPage.html">3</a></td>
 						<td>31.03.2022</td>
                         <td>400$</td>
-                        <td><a href="http://BuyItNowListing.html">Delete</a></td>
+                        <td><a href="">Delete</a></td>
                         <td><a href="http://BuyItNowListing.html">Edit</a></td>
 					</tr>
 				</tr>
@@ -135,7 +135,7 @@
                     <td>Bid Amount</td>
 				</tr>
 				<tr>
-					<td><a href="ItemPage.html">1</a></td>
+					<td><a href="AuctionItemPage.html">1</a></td>
 					<td>29.03.2022</td>
 					<td>Karataş</td>
                     <td>300$</td>
@@ -144,7 +144,7 @@
 					<td><a href="http://BuyItNowListing.html">Delete</a></td>
 					<td><a href="http://BuyItNowListing.html">Edit</a></td>
 					<tr>
-						<td><a href="ItemPage.html">2</a></td>
+						<td><a href="AuctionItemPage.html">2</a></td>
 						<td>30.03.2022</td>
 						<td>Yığ</td>
                         <td>400$</td>
@@ -154,7 +154,7 @@
                         <td><a href="http://BuyItNowListing.html">Edit</a></td>
 					</tr>
 					<tr>
-						<td><a href="ItemPage.html">3</a></td>
+						<td><a href="AuctionItemPage.html">3</a></td>
 						<td>31.03.2022</td>
 						<td>Özdemir</td>
                         <td>600$</td>
