--- a/NewMyFavoriteListings.html
+++ b/NewMyFavoriteListings.html
@@ -140,7 +140,7 @@
                     <td>Bid Amount</td>
 				</tr>
 				<tr>
-					<td><a href="ItemPage.html">1</a></td>
+					<td><a href="AuctionItemPage.html">1</a></td>
 					<td>29.03.2022</td>
 					<td>Karataş</td>
                     <td>300$</td>
@@ -149,7 +149,7 @@
 					<td><a href="http://BuyItNowListing.html">Add to Favorites</a></td>
 					<td><a href="http://BuyItNowListing.html">Contact Seller</a></td>
 					<tr>
-						<td><a href="ItemPage.html">2</a></td>
+						<td><a href="AuctionItemPage.html">2</a></td>
 						<td>30.03.2022</td>
 						<td>Yığ</td>
                         <td>400$</td>
@@ -159,7 +159,7 @@
 						<td><a href="http://BuyItNowListing.html">Contact Seller</a></td>
 					</tr>
 					<tr>
-						<td><a href="ItemPage.html">3</a></td>
+						<td><a href="AuctionItemPage.html">3</a></td>
 						<td>31.03.2022</td>
 						<td>Özdemir</td>
                         <td>600$</td>
